scp/css/scp.css
/* ... */
#content .settings_table th h4 a {
    display:block;
    color:#fff;
}

.settings_table h4 a span {
    font-size:12pt;
    line-height:14px;
    display:inline-block;
    width:14px;
    height:14px;
    overflow:hidden;
    text-align:center;
    color:#444;
    background:#ccc;
    position:relative;
    top:2px;
}

h2 {
    margin:0;
    padding:0;
    font-size:12pt;
    color:#0A568E;
}

h2 i {
    font-size:12px;
    top:-2px;
    position:relative;
    color:#0a0;
}

h2 span { color:#000; }

h3 {
    margin:10px 0 0 0;
    padding:5px 0;
    font-size:10pt;
    color:#444;
}

.has_bottom_border {
    padding-bottom:5px;
    border-bottom:1px solid #ddd;
}

.ticket_info th {
    text-align:left;
}

.ticket_info {
    background:#F4FAFF;
}

.right_align { text-align:right; }

h2 .reload {
    display:inline-block;
    width:16px;
    height:16px;
    background:url(../images/icons/refresh.gif) top left no-repeat;
    outline:none;
    text-indent:-9999px;
}

#assigned_message {
    margin:10px 0;
    padding:5px 5px 5px 30px;
    background:url(../images/icons/assigned_ticket.gif) 5px 50% no-repeat #ffd;
    border:1px solid #f90;
}




#ticket_actions {
    padding:5px;
    background:#eee;
    border:1px solid #aaa;
    border-bottom:none;
    margin:0;
}

#threads {
    margin:0;
    padding:5px 10px 0 10px;
    border:1px solid #aaa;
    background:#F4FAFF;
    height:30px;
}

#threads li {
    list-style:none;
    margin:0;
    padding:0;
    display:inline;
}

#threads li a {
    display:block;
    width:auto;
    float:left;
    height:30px;
    line-height:30px;
    border-top:1px solid #F4FAFF;
    padding:0 10px 0 32px;
    margin-right:10px;
}

#threads li a.active {
    height:29px;
    background-color:#fff;
    border:1px solid #aaa;
    border-bottom:none;
    border-top:2px solid #ed9100;
    font-weight:bold;
}

#toggle_ticket_thread {
    background:url(../images/icons/open.gif) 10px 50% no-repeat;
}

#toggle_notes {
    background:url(../images/icons/note.gif) 10px 50% no-repeat;
}

#ticket_thread table.message,
#ticket_thread table.response,
#ticket_thread table.note {
    margin-top:10px;
    border:1px solid #aaa;
    border-bottom:2px solid #aaa;
}

#ticket_notes table {
    margin-top:10px;
    border:1px solid #ddd;
    border-bottom:2px solid #ddd;
}

#ticket_thread table th, #ticket_notes table th {
    text-align:left;
    border-bottom:1px solid #aaa;
    font-size:10pt;
    padding:5px;
}

#ticket_notes table th {
    text-align:left;
    border-bottom:1px solid #ddd;
    font-size:10pt;
    padding:5px;
    background:#F4FAFF;
}

#ticket_notes table th em {
    font-weight:normal;
    font-size:10pt;
    color:#666;
}

#ticket_notes .date {
    font-weight:normal;
    font-size:10pt;
    color:#888;
    text-align:right;
}

#ticket_thread > .message th {
    background:#C3D9FF;
}

#ticket_thread > .response th {
    background:#FFE0B3;
}

#ticket_thread > .note th {
    background:#FFE;
}

#ticket_notes table td {
    padding:5px;
}

#ticket_notes td {
    background:#f9f9f9;
}

#ticket_thread .info, #ticket_notes .info {
    padding:5px;
    background:#F4FAFF;
    height:16px;
    line-height:16px;
}

#ticket_notes .info {
     background:#f9f9f9;
}

#response_options {
    margin-top:30px;
}

#response_options > form {
    padding:0 10px;
}

ul.tabs {
    padding:4px 0 0 20px;
    margin:0;
    text-align:center;
    height:29px;
    border-bottom:1px solid #aaa;
    background:#eef3f8;
}

#response_options ul.tabs {
    padding-left:190px;
}


ul.tabs li {
    margin:0;
    padding:0;
    display:inline;
    list-style:none;
}

ul.tabs li a {
    width:130px;
    font-weight:bold;
    padding:5px;
    height:18px;
    line-height:20px;
    color:#444;
    display:block;
    float:left;
    outline:none;
    position:relative;
    top:0;
    background:#fbfbfb;
    border:1px solid #eee;
    border-bottom:none;
}

#response_options .reply_tab.tell {
    color:#a00 !important;
    background-image:url(../images/reminder.png);
    background-position:12px 50%;
    background-repeat:no-repeat;
}

ul.tabs li a.active {
    height:18px;
    color:#184E81;
    background-color:#f9f9f9;
    border:1px solid #aaa;
    border-top:2px solid #81a9d7;
    border-bottom:none;
}

#response_options > form {
    padding:10px 5px;
    background:#f9f9f9;
    border:1px solid #aaa;
    border-top:none;
}

#response_options > form > table {
    table-layout: fixed;
}

#response_options > table td {
    vertical-align:top;
}

#response_options textarea {
    width:760px !important;
}

#response_options input[type=text], #response_options textarea:not(.richtext) {
    border:1px solid #aaa;
    background:#fff;
}

.attachments .uploads div {
    display:inline-block;
    padding-right:20px;
}



.file {
    display:inline-block;
    padding-left:20px;
    margin-right:20px;
    background:url(../images/icons/file.gif) 0 50% no-repeat;
}

.expander {
    line-height:14px;
    display:inline-block;
    width:12px;
    height:12px;
    overflow:hidden;
    text-align:center;
    color:#aaa;
    position:relative;
}

/** Popup Tool Tips and Content **/

.tip_box {
    display:block;
    height:30px;
    position:absolute;
    z-index:1000;
}

.tip_arrow {
    display:block;
    position:absolute;
    top:5px;
    left:-12px;
    width:12px;
    z-index:700;
}

.tip_box.right .tip_arrow {
    top: 5px;
    right: -12px;
    left: auto;
}

.flip-x {
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
}
/* ... */

